# Cover-Letter-Creator

./: Dockerfile  README.md  Resume.md  api.py  cli.py  docker-compose.yml  flake.nix  fly.toml  main.py  pyproject.toml  resume.md
.github/workflows/: deploy.yml
static/: clipboard.js  main.js
templates/: coverletter.html  index.html
