[project]
name = "coverlettercreator"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Sam Siggs",email = "sam.siggs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
